@@ -14,6 +14,7 @@ import com.intellij.openapi.util.BuildNumber
 import com.intellij.openapi.util.io.NioFiles
 import com.intellij.platform.ide.customization.ExternalProductResourceUrls
 import com.intellij.util.concurrency.annotations.RequiresBackgroundThread
+import com.intellij.util.currentJavaVersion
 import com.intellij.util.io.HttpRequests
 import com.intellij.util.system.OS
 import org.jetbrains.annotations.ApiStatus
@@ -25,6 +26,7 @@ import java.util.zip.ZipException
 import java.util.zip.ZipFile
 import javax.swing.UIManager
 
+@Suppress("UseOptimizedEelFunctions")
 @ApiStatus.Internal
 object UpdateInstaller {
   const val UPDATER_MAIN_CLASS: String = "com.intellij.updater.Runner"
@@ -155,6 +157,7 @@ object UpdateInstaller {
 
     args += jre.resolve(if (OS.CURRENT == OS.Windows) "bin\\java.exe" else "bin/java").toString()
     args += "-Xmx${2000}m"
+    currentJavaVersion().takeIf { it.feature >= 25 }?.let { args += "--enable-native-access=ALL-UNNAMED" }
     args += "-cp"
     args += patchFiles.last().toString()
 
